// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card: Component should render children when passed in 1`] = `
<Component>
  <CardComponent>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #1d1d20",
          "color": "#fff",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div>
        <h1>
          Test
        </h1>
        <p>
          Content
        </p>
      </div>
    </div>
  </CardComponent>
</Component>
`;

exports[`Card: Component should render component  with custom style and with header 1`] = `
<Component
  customStyles={
    Object {
      "color": "blue",
    }
  }
  headerComponent={
    <h1
      style={
        Object {
          "color": "red",
        }
      }
    >
      header
    </h1>
  }
>
  <CardComponent
    customStyles={
      Object {
        "color": "blue",
      }
    }
    headerComponent={
      <h1
        style={
          Object {
            "color": "red",
          }
        }
      >
        header
      </h1>
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #1d1d20",
          "color": "blue",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        style={
          Object {
            "color": "#a6a7aa",
            "fontSize": "12px",
            "marginBottom": "14px",
          }
        }
      >
        <h1
          style={
            Object {
              "color": "red",
            }
          }
        >
          header
        </h1>
      </div>
      <div>
        <p>
          Content
        </p>
      </div>
    </div>
  </CardComponent>
</Component>
`;

exports[`Card: Component should render correctly 1`] = `
<Component>
  <CardComponent>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #1d1d20",
          "color": "#fff",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    />
  </CardComponent>
</Component>
`;

exports[`Card: Component should render with attributes 1`] = `
<Component
  customStyles={
    Object {
      "color": "blue",
    }
  }
  id="test-id"
  title="test title"
>
  <CardComponent
    customStyles={
      Object {
        "color": "blue",
      }
    }
    id="test-id"
    title="test title"
  >
    <div
      id="test-id"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #1d1d20",
          "color": "blue",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
      title="test title"
    >
      Card with attributes
    </div>
  </CardComponent>
</Component>
`;
